# MessageProxy

./: settings.gradle.kts
.github/workflows/: android.yaml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/app.sanmer.message.proxy.database.AppDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/app/sanmer/message/proxy/: App.kt  Const.kt
app/src/main/kotlin/app/sanmer/message/proxy/compat/: BuildCompat.kt  SubscriptionManagerCompat.kt
app/src/main/kotlin/app/sanmer/message/proxy/database/: AppDatabase.kt
app/src/main/kotlin/app/sanmer/message/proxy/datastore/: PreferenceDataSource.kt  PreferenceSerializer.kt
app/src/main/kotlin/app/sanmer/message/proxy/ktx/: ContextExt.kt  LocalDateTimeExt.kt
app/src/main/kotlin/app/sanmer/message/proxy/receiver/: SmsReceiver.kt
app/src/main/kotlin/app/sanmer/message/proxy/ui/theme/: Color.kt  (+3 more)
app/src/main/res/drawable/: at.xml  circle_x_filled.xml  inbox.xml  launcher_foreground.xml  mail_forward.xml
app/src/main/res/values/: strings.xml  strings_untranslatable.xml
gradle/: libs.versions.toml
jni/: build.gradle.kts  proguard-rules.pro
jni/src/main/jni/: .gitignore  Cargo.toml  build.sh
jni/src/main/jni/.cargo/: config.toml
jni/src/main/jni/src/: lib.rs
jni/src/main/kotlin/dev/sanmer/email/: Address.kt  Lettre.kt  Mailbox.kt  Message.kt
liblettre/: build.gradle.kts  proguard-rules.pro
liblettre/src/main/jni/: Cargo.toml  build.rs  build_jni.sh
liblettre/src/main/jni/src/: lib.rs
liblettre/src/main/kotlin/dev/sanmer/lettre/: Address.kt  Lettre.kt  Mailbox.kt  Message.kt
(+18 files in other folders)
